--- a/action.yml
+++ b/action.yml
@@ -47,24 +47,28 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - name: setup nodejs
+    - name: ------------------START---------------------------
+      run:  "echo \"run with inputs [ bucket: ${{inputs.bucket}} , access-key: ${{inputs.access-key}} ,secret-key:${{inputs.secret-key}}, hexo-cli-version:${{inputs.hexo-cli-version}}, domain:${{inputs.domain}}, hexo-config-path:$${{inputs.hexo-config-path}}, theme-config-path:${{inputs.theme-config-path}},  theme-repostory:${{inputs.theme-repository}}, qiniu-zone:${{inputs.qiniu-zone}}, theme-name:${{inputs.theme-name}},  refresh-on: ${{inputs.refresh-on}}] "
+      shell: bash
+
+    - name: ----------------- setup nodejs--------------------
       uses: actions/setup-node@v2
       with:
         node-version: 16.x
 
-    - uses: actions/checkout@v3
+    - uses: ----------- actions/checkout@v3-------------------
       with:
         repository: DaxiLi/aja_hexo_push_action
         fetch-depth: 1
         path: blog
 
-    - name: checkout source
+    - name: ------------- checkout source --------------------
       uses: actions/checkout@v3
       with:
         fetch-depth: 1
         path: source
 
-    - name: checkout theme
+    - name: ------------- checkout theme ---------------------
       uses: actions/checkout@v3
       if: ${{ inputs.theme-repository }} != '' || ${{ inputs.theme-repository }} != 'none'
       with:
@@ -72,22 +76,22 @@ runs:
         fetch-depth: 1
         path: theme
 
-    - name: install dependencies
+    - name: ------------- install dependencies ---------------
       run: npm ci
       shell: bash
       working-directory: blog
 
-    - name: install dependencies
+    - name: ------------ install dependencies  ---------------
       run: npm ci
       shell: bash
       working-directory: blog/hexo
 
-    - name: install hexo
+    - name: ------------- install hexo  ----------------------
       run: npm install -g hexo-cli@${{ inputs.hexo-cli-version }}
       shell: bash
       working-directory: blog
 
-    - name: config
+    - name: -------------------- config ----------------------
       run: |
         rm -rf blog/hexo/source && cp -rf source blog/hexo/
       shell: bash
@@ -107,25 +111,25 @@ runs:
         cp -rf source/${{inputs.theme-config-path}}  blog/hexo/themes/${{inputs.theme-name}}/_config.yml
       shell: bash
 
-    - name: clean ddirectory
+    - name: -------------------- clean ddirectory ---------------
       run: rm -rf blog/hexo/source/.github blog/hexo/source/.git
       shell: bash
 
-    - name: generate public file
+    - name: ----------------- generate public file --------------
       run: hexo generate
       shell: bash
       working-directory: blog/hexo/
 
-    - name: list  the generate files
+    - name: ---------------- list  the generate files  -------------
       run: |
         ls -ll blog/hexo blog/hexo/public  blog/hexo/themes  blog/hexo/themes/cards
       shell: bash
 
-    - name: get manifest.json
+    - name: --------------------- get manifest.json --------------------
       if: ${{inputs.domain}} != '' && ${{inputs.domain}} != 'none'
       run: wget --no-check-certificate ${{inputs.domain}}manifest.json -O ./manifest.json
       shell: bash
 
-    - name: upload
+    - name: ---------------------------------------- upload  -------------------
       run: node blog/main.js ${{inputs.bucket}} ${{inputs.access-key}} ${{inputs.secret-key}} blog/hexo/public ${{inputs.domain}} ${{inputs.qiniu-zone}} ./manifest.json ${{inputs.refresh-on}}
       shell: bash
