--- a/action.yml
+++ b/action.yml
@@ -26,8 +26,8 @@ inputs:
     description: theme config file
     required: true
     default: "none"
-  theme-repostory:
-    description: the repostory of theme
+  theme-repository:
+    description: the repository of theme
     required: false
     default: "none"
   qiniu-zone: 
@@ -48,7 +48,7 @@ runs:
   using: "composite"
   steps:
     - name: ------------------START---------------------------
-      run:  "echo \"run with inputs [ bucket: ${{inputs.bucket}} , access-key: ${{inputs.access-key}} ,secret-key:${{inputs.secret-key}}, hexo-cli-version:${{inputs.hexo-cli-version}}, domain:${{inputs.domain}}, hexo-config-path:${{inputs.hexo-config-path}}, theme-config-path:${{inputs.theme-config-path}},  theme-repostory:${{inputs.theme-repository}}, qiniu-zone:${{inputs.qiniu-zone}}, theme-name:${{inputs.theme-name}},  refresh-on: ${{inputs.refresh-on}}] \""
+      run:  "echo \"run with inputs [ bucket: ${{inputs.bucket}} , access-key: ${{inputs.access-key}} ,secret-key:${{inputs.secret-key}}, hexo-cli-version:${{inputs.hexo-cli-version}}, domain:${{inputs.domain}}, hexo-config-path:${{inputs.hexo-config-path}}, theme-config-path:${{inputs.theme-config-path}},  theme-repository:${{inputs.theme-repository}}, qiniu-zone:${{inputs.qiniu-zone}}, theme-name:${{inputs.theme-name}},  refresh-on: ${{inputs.refresh-on}}] \""
       shell: bash
 
     - name: ----------------- setup nodejs--------------------
