--- a/action.yml
+++ b/action.yml
@@ -51,7 +51,7 @@ inputs:
     required: true
     default: "none"
   debug:
-    description:  package-lock-file
+    description:  debug
     required: true
     default: "none"
 
@@ -60,7 +60,7 @@ runs:
   using: "composite"
   steps:
     - name: ------------------START---------------------------
-      run:  "echo \"run with inputs [ bucket: ${{inputs.bucket}} , access-key: ${{inputs.access-key}} ,secret-key:${{inputs.secret-key}}, hexo-cli-version:${{inputs.hexo-cli-version}}, domain:${{inputs.domain}}, hexo-config-path:${{inputs.hexo-config-path}}, theme-config-path:${{inputs.theme-config-path}},  theme-repository:${{inputs.theme-repository}}, qiniu-zone:${{inputs.qiniu-zone}}, theme-name:${{inputs.theme-name}},  refresh-on: ${{inputs.refresh-on}}, package: ${{inputs.package-file}}, package-lock: ${{inputs.package-lock-file}}] \""
+      run:  "echo \"run with inputs [ bucket: ${{inputs.bucket}} , access-key: ${{inputs.access-key}} ,secret-key:${{inputs.secret-key}}, hexo-cli-version:${{inputs.hexo-cli-version}}, domain:${{inputs.domain}}, hexo-config-path:${{inputs.hexo-config-path}}, theme-config-path:${{inputs.theme-config-path}},  theme-repository:${{inputs.theme-repository}}, qiniu-zone:${{inputs.qiniu-zone}}, theme-name:${{inputs.theme-name}},  refresh-on: ${{inputs.refresh-on}}, package: ${{inputs.package-file}}, package-lock: ${{inputs.package-lock-file}}, debug: ${{inputs.debug}}] \""
       shell: bash
 
     - name: ----------------- setup nodejs--------------------
