--- a/action.yml
+++ b/action.yml
@@ -88,6 +88,15 @@ runs:
         fetch-depth: 1
         path: theme
 
+
+
+    - name: ------------- install hexo  ----------------------
+      run: npm install -g hexo-cli@${{ inputs.hexo-cli-version }}
+      shell: bash
+      working-directory: blog
+
+
+
     - name: -------------------- config ----------------------
       run: |
         rm -rf blog/hexo/source && cp -rf source blog/hexo/
@@ -118,8 +127,12 @@ runs:
         rm -rf blog/hexo/package-lock.json && cp -rf source/${{inputs.package-lock-file}}  blog/hexo/package-lock.json
       shell: bash
 
-    - if: ${{inputs.debug}} == 'debug'
+    - if: ${{inputs.debug}} == "debug"
       run: cat blog/hexo/package.json blog/hexo/package-lock.json
+      shell: bash
+
+    - if: ${{inputs.debug}} == "debug"
+      run: echo "${{inputs.debug}} == "debug"  true??"
       shell: bash
 
     - name: ------------- install dependencies ---------------
@@ -132,20 +145,26 @@ runs:
       shell: bash
       working-directory: blog/hexo
 
-    - name: ------------- install hexo  ----------------------
-      run: npm install -g hexo-cli@${{ inputs.hexo-cli-version }}
-      shell: bash
-      working-directory: blog
-
 
     - name: -------------------- clean ddirectory ---------------
       run: rm -rf blog/hexo/source/.github blog/hexo/source/.git
       shell: bash
 
+    - name: ----------------- clean public file --------------
+      run: hexo clean
+      shell: bash
+      working-directory: blog/hexo/    
+      
     - name: ----------------- generate public file --------------
       run: hexo generate
       shell: bash
       working-directory: blog/hexo/
+
+    - name: ----------------- generate public file --------------
+      run: hexo generate
+      shell: bash
+      working-directory: blog/hexo/
+
 
     - name: ---------------- list  the generate files  -------------
       run: |
