--- a/action.yml
+++ b/action.yml
@@ -127,11 +127,11 @@ runs:
         rm -rf blog/hexo/package-lock.json && cp -rf source/${{inputs.package-lock-file}}  blog/hexo/package-lock.json
       shell: bash
 
-    - if: ${{inputs.debug}} != 'none'
+    - if: ${{inputs.debug != 'none'}} 
       run: echo "${{inputs.debug}} == "debug""
       shell: bash
-      
-    - if: ${{inputs.debug}}
+
+    - if: ${{inputs.debug ==  'debug'}}
       run: cat blog/hexo/package.json blog/hexo/package-lock.json
       shell: bash
 
