--- a/action.yml
+++ b/action.yml
@@ -102,34 +102,31 @@ runs:
         rm -rf blog/hexo/source && cp -rf source blog/hexo/
       shell: bash
 
-    - if: ${{ inputs.theme-repository }} != '' || ${{ inputs.theme-repository }} != 'none'
+    - if: ${{ inputs.theme-repository != '' ||  inputs.theme-repository  != 'none' }}
       run: |
         rm -rf blog/hexo/themes/* && cp -rf theme blog/hexo/themes/${{inputs.theme-name}}
       shell: bash
 
     - name: move config
-      if: ${{inputs.hexo-config-path}} != '' && ${{inputs.hexo-config-path}} != 'none'
+      if: ${{inputs.hexo-config-path!= '' && inputs.hexo-config-path != 'none'}} 
       run: cp source/${{inputs.hexo-config-path}} blog/hexo/_config.yml
       shell: bash
 
-    - if: ${{inputs.theme-config-path}} != '' && ${{inputs.theme-config-path}} != 'none'
+    - if: ${{inputs.theme-config-path!= '' && inputs.theme-config-path != 'none' }} 
       run: |
         cp -rf source/${{inputs.theme-config-path}}  blog/hexo/themes/${{inputs.theme-name}}/_config.yml
       shell: bash
 
-    - if: ${{inputs.package-file}} != '' && ${{inputs.package-file}} != 'none'
+    - if: ${{inputs.package-file!= '' && inputs.package-file != 'none'}} 
       run: |
         rm -rf blog/hexo/package.json && cp -f source/${{inputs.package-file}}  blog/hexo/package.json
       shell: bash
 
-    - if: ${{inputs.package-lock-file}} != '' && ${{inputs.package-lock-file}} != 'none'
+    - if: ${{inputs.package-lock-file != '' && inputs.package-lock-file != 'none'}}
       run: |
         rm -rf blog/hexo/package-lock.json && cp -rf source/${{inputs.package-lock-file}}  blog/hexo/package-lock.json
       shell: bash
 
-    - if: ${{inputs.debug != 'none'}} 
-      run: echo "${{inputs.debug}} == "debug""
-      shell: bash
 
     - if: ${{inputs.debug ==  'debug'}}
       run: cat blog/hexo/package.json blog/hexo/package-lock.json
@@ -168,12 +165,13 @@ runs:
 
 
     - name: ---------------- list  the generate files  -------------
+      if: ${{inputs.debug == 'debug'}}
       run: |
         ls -ll blog/hexo blog/hexo/public  blog/hexo/themes  blog/hexo/themes/cards
       shell: bash
 
     - name: --------------------- get manifest.json --------------------
-      if: ${{inputs.domain}} != '' && ${{inputs.domain}} != 'none'
+      if: ${{inputs.domain!= '' && inputs.domain != 'none' }} 
       run: wget --no-check-certificate ${{inputs.domain}}manifest.json -O ./manifest.json
       shell: bash
 
