--- a/action.yml
+++ b/action.yml
@@ -15,9 +15,6 @@ inputs:
     description: "The hexo cli version in your local env"
     required: true
     default: "4.3.0"
-  domain:
-    description: "Your website domain(http://example.com/)"
-    required: true
   hexo-config-path:
     description: hexo config file path
     required: true
@@ -30,26 +27,38 @@ inputs:
     description: the repository of theme
     required: false
     default: "none"
-  qiniu-zone: 
-    description: qiniu zone code
-    required: true
-    default: "none"
   theme-name:
     description: theme name
     required: true
     default: "theme"
-  refresh-on: 
-    description: upload all files
-    required: true
-    default: "no"
   package-file: 
     description: package
     required: true
-    default: "none"
+    default: ""
   package-lock-file:
     description:  package-lock-file
     required: true
-    default: "none"
+    default: ""
+  sub-dir:
+    description:  package-lock-file
+    required: true
+    default: ""
+  upload-dir:
+    description:  upload-dir
+    required: true
+    default: "hexo/public"
+  thread-count:
+    description:  upload-dir
+    required: true
+    default: "8"
+  check-hash:
+    description:  use hash to chech 
+    required: true
+    default: "true"
+  check-exists:
+    description:  check the file was exists
+    required: true
+    default: "true"
   debug:
     description:  debug
     required: true
@@ -60,7 +69,7 @@ runs:
   using: "composite"
   steps:
     - name: ------------------START---------------------------
-      run:  "echo \"run with inputs [ bucket: ${{inputs.bucket}} , access-key: ${{inputs.access-key}} ,secret-key:${{inputs.secret-key}}, hexo-cli-version:${{inputs.hexo-cli-version}}, domain:${{inputs.domain}}, hexo-config-path:${{inputs.hexo-config-path}}, theme-config-path:${{inputs.theme-config-path}},  theme-repository:${{inputs.theme-repository}}, qiniu-zone:${{inputs.qiniu-zone}}, theme-name:${{inputs.theme-name}},  refresh-on: ${{inputs.refresh-on}}, package: ${{inputs.package-file}}, package-lock: ${{inputs.package-lock-file}}, debug: ${{inputs.debug}}] \""
+      run:  "echo \"run with inputs [ bucket: ${{inputs.bucket}} , access-key: ${{inputs.access-key}} ,secret-key:${{inputs.secret-key}}, hexo-cli-version:${{inputs.hexo-cli-version}}, hexo-config-path:${{inputs.hexo-config-path}}, theme-config-path:${{inputs.theme-config-path}},  theme-repository:${{inputs.theme-repository}}, theme-name:${{inputs.theme-name}}, package: ${{inputs.package-file}}, package-lock: ${{inputs.package-lock-file}}, debug: ${{inputs.debug}}] \""
       shell: bash
 
     - name: ----------------- setup nodejs--------------------
@@ -170,11 +179,17 @@ runs:
         ls -ll blog/hexo blog/hexo/public  blog/hexo/themes  blog/hexo/themes/cards
       shell: bash
 
-    - name: --------------------- get manifest.json --------------------
-      if: ${{inputs.domain!= '' && inputs.domain != 'none' }} 
-      run: wget --no-check-certificate ${{inputs.domain}}manifest.json -O ./manifest.json
+    - name: upload file
+      run: bash run.sh
+      env: 
+        accessKey: ${{inputs.access-key}}
+        secretKey: ${{inputs.secret-key}}
+        bucket: ${{inputs.bucket}}
+        sub_dir: ${{inputs.sub-dir}}
+        upload_dir: ${{inputs.upload-dir}}
+        thread_count: ${{inputs.thread-count}}
+        check_exists: ${{inputs.check-exists}}
+        check_hash: ${{inputs.check-hash}}
       shell: bash
 
-    - name: ---------------------------------------- upload  -------------------
-      run: node blog/main.js ${{inputs.bucket}} ${{inputs.access-key}} ${{inputs.secret-key}} blog/hexo/public ${{inputs.domain}} ${{inputs.qiniu-zone}} ./manifest.json ${{inputs.refresh-on}} ${{inputs.debug}}
-      shell: bash
+
