--- a/action.yml
+++ b/action.yml
@@ -206,7 +206,7 @@ runs:
         skip_path_prefixes: ${{inputs.skip-path-prefixes}}
         skip_file_prefixes: ${{inputs.skip-file-prefixes}}
         skip_suffixes: ${{inputs.skip-suffixes}}
-        skip_fixed_strings: ${{skip-fixed-strings}}
+        skip_fixed_strings: ${{inputs.skip-fixed-strings}}
       shell: bash
       working-directory:  blog/
 
