--- a/action.yml
+++ b/action.yml
@@ -101,7 +101,7 @@ runs:
   using: "composite"
   steps:
     - name: ------------------START---------------------------
-      run:  "echo \"run with inputs [ bucket: ${{inputs.bucket}} , access-key: ${{inputs.access-key}} ,secret-key:${{inputs.secret-key}}, hexo-cli-version:${{inputs.hexo-cli-version}}, hexo-config-path:${{inputs.hexo-config-path}}, theme-config-path:${{inputs.theme-config-path}},  theme-repository:${{inputs.theme-repository}}, theme-name:${{inputs.theme-name}}, package: ${{inputs.package-file}}, package-lock: ${{inputs.package-lock-file}}, debug: ${{inputs.debug}}] \""
+      run:  "echo \"run with inputs [ bucket: ${{inputs.bucket}} , access-key: ${{inputs.access-key}} ,secret-key:${{inputs.secret-key}}, hexo-cli-version:${{inputs.hexo-cli-version}}, hexo-config-path:${{inputs.hexo-config-path}}, theme-config-path:${{inputs.theme-config-path}},  theme-repository:${{inputs.theme-repository}}, theme-name:${{inputs.theme-name}}, theme-repository-ref:${{inputs.theme-repository-ref}} package: ${{inputs.package-file}}, package-lock: ${{inputs.package-lock-file}}, debug: ${{inputs.debug}}] \""
       shell: bash
 
     - name: ----------------- setup nodejs--------------------
